fix: header spacing is too small

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -38,6 +38,8 @@ h3, .h3 {
 }
 
 .page-header {
+  padding-top: 7em;
+  padding-bottom: 5em;
   min-height: calc(25vh - 4em);
 }
 
